force-app/main/default/objects/maps__LiveWorkingHours__c/maps__LiveWorkingHours__c.object-meta.xml
<CustomObject>
    <label>Maps Live Working Hours</label>
    <nameField>
        <label>Maps Live Working Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>