force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__FridayStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__FridayStartTime__c</fullName>
    <label>Friday Start Time</label>
    <type>Time</type>
</CustomField>