force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__IsActive__c.field-meta.xml
<CustomField>
    <fullName>maps__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field must be selected Active in order to designate Live Working Hours</description>
    <inlineHelpText>This field must be selected Active in order to designate Live Working Hours</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>