force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__MondayEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__MondayEndTime__c</fullName>
    <label>Monday End Time</label>
    <type>Time</type>
</CustomField>