force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__SaturdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__SaturdayEndTime__c</fullName>
    <label>Saturday End Time</label>
    <type>Time</type>
</CustomField>