force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__SaturdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__SaturdayStartTime__c</fullName>
    <label>Saturday Start Time</label>
    <type>Time</type>
</CustomField>