force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__SundayEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__SundayEndTime__c</fullName>
    <label>Sunday End Time</label>
    <type>Time</type>
</CustomField>