force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__SundayStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__SundayStartTime__c</fullName>
    <label>Sunday Start Time</label>
    <type>Time</type>
</CustomField>