force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__ThursdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__ThursdayEndTime__c</fullName>
    <label>Thursday End Time</label>
    <type>Time</type>
</CustomField>