force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__ThursdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__ThursdayStartTime__c</fullName>
    <label>Thursday Start Time</label>
    <type>Time</type>
</CustomField>