force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__TuesdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__TuesdayEndTime__c</fullName>
    <label>Tuesday End Time</label>
    <type>Time</type>
</CustomField>