force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__TuesdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__TuesdayStartTime__c</fullName>
    <label>Tuesday Start Time</label>
    <type>Time</type>
</CustomField>