force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__WednesdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__WednesdayEndTime__c</fullName>
    <label>Wednesday End Time</label>
    <type>Time</type>
</CustomField>