force-app/main/default/objects/maps__LiveWorkingHours__c/fields/maps__WednesdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__WednesdayStartTime__c</fullName>
    <label>Wednesday Start Time</label>
    <type>Time</type>
</CustomField>